Added work portfolio

--- a/src/content/projects/quickview/index.mdx
+++ b/src/content/projects/quickview/index.mdx
@@ -4,7 +4,7 @@ description: "An AR cloud content management system"
 date: "2024"
 demoURL: "/quickviewdemo"
 ---
-import { Tweet, Vimeo, YouTube } from 'astro-embed';
+import { Tweet, Vimeo, YouTube, LinkPreview } from 'astro-embed';
 import DevIcon from 'devicons-astro';
 
 <YouTube id="tRZPLgZB_II" />
